--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <canvas></canvas>
+    <div class="container">
+      <div class="heath-bar-container">
+        <div class="player-health"></div>
+        <div class="timer"></div>
+        <div class="enemy-health"></div>
+      </div>
+      <canvas></canvas>
+    </div>
 
     <script src="app.js"></script>
   </body>
