health bars functioning

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
   </head>
   <body>
     <div class="container">
-      <div class="heath-bar-container">
-        <div class="player-health"></div>
+      <div class="health-bar-container">
+        <div class="player-health">
+          <div class="player-bar"></div>
+        </div>
+
         <div class="timer"></div>
-        <div class="enemy-health"></div>
+        <div class="enemy-health">
+          <div class="enemy-bar"></div>
+        </div>
       </div>
       <canvas></canvas>
     </div>
