--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
       <div class="win-results">tie</div>
       <canvas></canvas>
     </div>
+
+    <script src="./js/utils.js"></script>
     <script src="./js/classes.js"></script>
+
     <script src="app.js"></script>
   </body>
 </html>
